tried to doccument the api & use mappers but do not work